Bug 1066459 - Clamp the new top row index to the valid range before assigning it to mTopRowIndex when scrolling.  r=kip a=lmandel